try to add a custom label for clustertool related stuffs.

--- a/.github/renovate/basics/commitMessage.json5
+++ b/.github/renovate/basics/commitMessage.json5
@@ -60,6 +60,10 @@
       "commitMessageTopic": "chart {{depName}}",
       "commitMessageExtra": "{{currentVersion}} → {{newVersion}}",
       "prefix": "chore(helm)"
+    },
+    {
+      "matchPaths": ["clustertool/**"],
+      "commitMessageSuffix": "(clustertool)"
     }
   ]
 }
