--- a/clustertool/embed/generic/kubernetes/system/spegel/app/helm-release.yaml
+++ b/clustertool/embed/generic/kubernetes/system/spegel/app/helm-release.yaml
@@ -4,7 +4,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: spegel
-  namespace: kube-system
+  namespace: spegel
 spec:
   interval: 30m
   chart:
