fix(clustertool): kyverno gha fix

--- a/clustertool/embed/generic/kubernetes/core/kyverno-policies/app/patch-gha.yaml
+++ b/clustertool/embed/generic/kubernetes/core/kyverno-policies/app/patch-gha.yaml
@@ -27,3 +27,4 @@ spec:
                   - --group=123
                   - --registry-mirror=http://spegel-registry.spegel.svc.cluster.local:5000
                   - --insecure-registry=http://spegel-registry.spegel.svc.cluster.local:5000
+                  - --feature=containerd-snapshotter
