fix(clustertool): kyverno gha tweaks again

--- a/clustertool/embed/generic/kubernetes/core/kyverno-policies/app/patch-gha.yaml
+++ b/clustertool/embed/generic/kubernetes/core/kyverno-policies/app/patch-gha.yaml
@@ -26,5 +26,6 @@ spec:
                   - --host=unix:///var/run/docker.sock
                   - --group=123
                   - --registry-mirror=http://spegel-registry.spegel.svc.cluster.local:5000
-                  - --insecure-registry=http://spegel-registry.spegel.svc.cluster.local:5000
+                  - --insecure-registry=spegel-registry.spegel.svc.cluster.local:5000
                   - --feature=containerd-snapshotter
+                  - --debug="true"
