use placeholder config path

--- a/charts/incubator/spegel/ci/ci-values.yaml
+++ b/charts/incubator/spegel/ci/ci-values.yaml
@@ -8,6 +8,6 @@ spegel:
   # -- Containerd namespace where images are stored.
   containerdNamespace: "k8s.io"
   # -- Path to Containerd mirror configuration.
-  containerdRegistryConfigPath: "/etc/rancher/k3s/"
+  containerdRegistryConfigPath: "/tmp/placeholder/hosts/"
   # -- Path to Containerd content store..
   containerdContentPath: "/var/lib/containerd/io.containerd.content.v1.content"
