--- a/.github/workflows/charts-test.yaml
+++ b/.github/workflows/charts-test.yaml
@@ -154,7 +154,8 @@ jobs:
       - name: Update containerd config
         if: contains(matrix.chart, 'Spegel')
         run: |
-          sudo tee -a /var/lib/rancher/k3s/agent/etc/containerd/config.toml.tmpl > /dev/null <<EOL
+          sudo mkdir -p /var/lib/rancher/k3s/agent/etc/containerd/
+          sudo tee /var/lib/rancher/k3s/agent/etc/containerd/config.toml.tmpl > /dev/null <<EOL
           [plugins."io.containerd.grpc.v1.cri".registry]
              config_path = "/var/lib/rancher/k3s/agent/etc/containerd/certs.d"
           [plugins."io.containerd.grpc.v1.cri".containerd]
@@ -225,7 +226,8 @@ jobs:
       - name: Update containerd config
         if: contains(matrix.chart, 'Spegel')
         run: |
-          sudo tee -a /var/lib/rancher/k3s/agent/etc/containerd/config.toml.tmpl > /dev/null <<EOL
+          sudo mkdir -p /var/lib/rancher/k3s/agent/etc/containerd/
+          sudo tee /var/lib/rancher/k3s/agent/etc/containerd/config.toml.tmpl > /dev/null <<EOL
           [plugins."io.containerd.grpc.v1.cri".registry]
              config_path = "/var/lib/rancher/k3s/agent/etc/containerd/certs.d"
           [plugins."io.containerd.grpc.v1.cri".containerd]
@@ -296,7 +298,8 @@ jobs:
       - name: Update containerd config
         if: contains(matrix.chart, 'Spegel')
         run: |
-          sudo tee -a /var/lib/rancher/k3s/agent/etc/containerd/config.toml.tmpl > /dev/null <<EOL
+          sudo mkdir -p /var/lib/rancher/k3s/agent/etc/containerd/
+          sudo tee /var/lib/rancher/k3s/agent/etc/containerd/config.toml.tmpl > /dev/null <<EOL
           [plugins."io.containerd.grpc.v1.cri".registry]
              config_path = "/var/lib/rancher/k3s/agent/etc/containerd/certs.d"
           [plugins."io.containerd.grpc.v1.cri".containerd]
@@ -367,7 +370,8 @@ jobs:
       - name: Update containerd config
         if: contains(matrix.chart, 'Spegel')
         run: |
-          sudo tee -a /var/lib/rancher/k3s/agent/etc/containerd/config.toml.tmpl > /dev/null <<EOL
+          sudo mkdir -p /var/lib/rancher/k3s/agent/etc/containerd/
+          sudo tee /var/lib/rancher/k3s/agent/etc/containerd/config.toml.tmpl > /dev/null <<EOL
           [plugins."io.containerd.grpc.v1.cri".registry]
              config_path = "/var/lib/rancher/k3s/agent/etc/containerd/certs.d"
           [plugins."io.containerd.grpc.v1.cri".containerd]
@@ -438,7 +442,8 @@ jobs:
       - name: Update containerd config
         if: contains(matrix.chart, 'Spegel')
         run: |
-          sudo tee -a /var/lib/rancher/k3s/agent/etc/containerd/config.toml.tmpl > /dev/null <<EOL
+          sudo mkdir -p /var/lib/rancher/k3s/agent/etc/containerd/
+          sudo tee /var/lib/rancher/k3s/agent/etc/containerd/config.toml.tmpl > /dev/null <<EOL
           [plugins."io.containerd.grpc.v1.cri".registry]
              config_path = "/var/lib/rancher/k3s/agent/etc/containerd/certs.d"
           [plugins."io.containerd.grpc.v1.cri".containerd]
