--- a/.github/workflows/charts-test.yaml
+++ b/.github/workflows/charts-test.yaml
@@ -443,6 +443,7 @@ jobs:
         if: contains(matrix.chart, 'Spegel')
         run: |
           sudo mkdir -p /var/lib/rancher/k3s/agent/etc/containerd/
+          sudo mkdir -p /var/lib/rancher/k3s/agent/etc/containerd/certs.d/
           sudo tee /var/lib/rancher/k3s/agent/etc/containerd/config.toml.tmpl > /dev/null <<EOL
           [plugins."io.containerd.grpc.v1.cri".registry]
              config_path = "/var/lib/rancher/k3s/agent/etc/containerd/certs.d"
