--- a/clustertool/embed/generic/kubernetes/system/spegel/app/helm-release.yaml
+++ b/clustertool/embed/generic/kubernetes/system/spegel/app/helm-release.yaml
@@ -26,5 +26,5 @@ spec:
   values:
       service:
         main:
-          type: LoadBalancer
+          type: '{{ if ne "${SPEGEL_IP}" "" }}LoadBalancer{{ else }}ClusterIP{{ end }}'
           loadBalancerIP: ${SPEGEL_IP}
