add more changelogg stuff to ClusterTool changelog

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -30,6 +30,8 @@ changelog:
       - "^test"
     include:
       - "clustertool"
+      - "clustertool"
+      - "Clustertool"
 release:
   name_template: "{{.ProjectName}}-{{.Tag}}"
   github:
