--- a/.github/workflows/clustertool.release.yaml
+++ b/.github/workflows/clustertool.release.yaml
@@ -14,6 +14,8 @@ jobs:
       - uses: actions/setup-go@0a12ed9d6a96ab950c8f026ed9f722fe0da7ef32 # v5
         with:
           go-version: stable
+      - name: Install Syft
+        run: sudo apt-get update && sudo apt-get install -y syft
       - uses: actions/checkout@eef61447b9ff4aafe5dcd4e0bbf5d482be7e7871 # v4
         with:
           fetch-depth: 0
