--- a/.github/workflows/clustertool.release.yaml
+++ b/.github/workflows/clustertool.release.yaml
@@ -15,7 +15,7 @@ jobs:
         with:
           go-version: stable
       - name: Install Syft
-        run: sudo apt-get update && sudo apt-get install -y syft
+        run: sudo curl -sSfL https://raw.githubusercontent.com/anchore/syft/main/install.sh | sh -s -- -b /usr/local/bin
       - uses: actions/checkout@eef61447b9ff4aafe5dcd4e0bbf5d482be7e7871 # v4
         with:
           fetch-depth: 0
