--- a/.github/workflows/charts-release.yaml
+++ b/.github/workflows/charts-release.yaml
@@ -67,11 +67,15 @@ jobs:
 
       - name: Cache Changelog
         id: cache-changelog
-        if: github.event_name == 'push' && needs.check_changes.outputs.changes_detected == 'true' && 'true' != 'true'
+        if: github.event_name == 'push' && needs.check_changes.outputs.changes_detected == 'true'
         uses: actions/cache@6849a6489940f00c2f30c0fb92c6274307ccb58a # v4
         with:
+          key: ${{ env.CHANGELOG_CACHE_KEY }}-${{ hashFiles('changelog.json.gz') }}
           path: changelog.json.gz
-          key: ${{ env.CHANGELOG_CACHE_KEY }}
+          restore-keys: |
+            ${{ env.CHANGELOG_CACHE_KEY }}-${{ hashFiles('changelog.json.gz') }}
+            ${{ env.CHANGELOG_CACHE_KEY }}
+
 
       - name: Generate Changelog
         shell: bash
@@ -225,7 +229,7 @@ jobs:
         uses: actions/cache@6849a6489940f00c2f30c0fb92c6274307ccb58a # v4
         with:
           # Cache for build and optimized images.
-          key: astro-${{ hashFiles('package-lock.json') }}
+          key: astro-${{ hashFiles('website/package-lock.json') }}
           path: ./website/.astro
           restore-keys: astro-
 
@@ -235,7 +239,7 @@ jobs:
         with:
           # Cache for npm
           path: ~/website/.npm
-          key: npm-${{ hashFiles('package-lock.json') }}
+          key: npm-${{ hashFiles('website/package-lock.json') }}
           restore-keys: npm-
 
       - name: Setup node_modules Cache
@@ -245,7 +249,7 @@ jobs:
         with:
           # Cache for npm and optimized images.
           path: ./website/node_modules
-          key: modules-${{ hashFiles('package-lock.json') }}
+          key: modules-${{ hashFiles('website/package-lock.json') }}
 
       - name: Setup Node
         if: needs.check_changes.outputs.changes_detected == 'true' && needs.check_changes.outputs.changes_detected == 'true'
